x11proto-dri2 (2.2-1) UNRELEASED; urgency=low

  * New upstream release. (LP: #377090)

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 09 Jan 2010 02:26:40 +0200

x11proto-dri2 (2.1-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.2.

 -- Julien Cristau <jcristau@debian.org>  Fri, 19 Jun 2009 17:30:30 +0200

x11proto-dri2 (2.0-1) unstable; urgency=low

  * New upstream release.
  * Add build-dep on xutils-dev >= 1:7.4+4.
  * Install the upstream changelog.
  * Bump Standards-Version to 3.8.1.
  * Bump dh compat to 5 to make lintian happy.

 -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:50:28 +0200

x11proto-dri2 (1.99.3-1) unstable; urgency=low

  [ Timo Aaltonen ]
  * New upstream release.

  [ Julien Cristau ]
  * debian/rules: drop some useless code (we don't need to set CFLAGS or set
    the architecture, we don't build anything).
  * Install dri2proto.txt.
  * debian/copyright: update copyright year.

 -- Julien Cristau <jcristau@debian.org>  Fri, 09 Jan 2009 06:57:20 +0100

x11proto-dri2 (1.1-1) unstable; urgency=low

  * Initial release.

 -- Julien Cristau <jcristau@debian.org>  Thu, 05 Jun 2008 22:14:02 +0200