@@ -1,6 +1,11 @@
 x11proto-dri2 (2.2-1) UNRELEASED; urgency=low
 
+  [ Timo Aaltonen ]
   * New upstream release. (LP: #377090)
+
+  [ Julien Cristau ]
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 09 Jan 2010 02:26:40 +0200
 
